# python-c3tools

./: Makefile  README.md  pyproject.toml
src/c3tools/: cli.py  main.py
src/c3tools/cli/: __init__.py  clitypes.py  glams.py  jp.py  json.py  random.py  string.py  yaml.py
src/c3tools/lib/: __init__.py  openapi.py  pydantic.py  random.py  stdin.py  string.py  subr.py  yaml.py
src/c3tools/random/: cli.py  uuid.py
