[tool.poetry]
name = "c3tools"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]

[tool.poetry.scripts]
c3tools = "c3tools.cli:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
Jinja2 = "^3.0.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
