[tool.poetry]
name = "c3tools"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]

[tool.poetry.scripts]
c3tools = "c3tools.main:app"

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.4.0"
Jinja2 = "^3.0.3"
jmespath = "^0.10.0"
PyYAML = "^6.0"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
autoflake = "^1.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.isort]
profile = 'black'
line_length = 119
